--- a/contact.html
+++ b/contact.html
@@ -22,20 +22,24 @@
         <h2>Social Media & Website</h2>
         <p>
             <i class="fa-brands fa-facebook-f"></i>
-            <a href="https://facebook.com/YOURPAGE" target="_blank">Facebook</a>
+            <a href="https:" target="_blank">Facebook</a>
         </p>
         <p>
             <i class="fa-brands fa-instagram"></i>
-            <a href="https://instagram.com/YOURUSERNAME" target="_blank">Instagram</a>
+            <a href="https://" target="_blank">Instagram</a>
         </p>
         <p>
             <i class="fa-brands fa-x-twitter"></i>
-            <a href="https://x.com/YOURUSERNAME" target="_blank">X / Twitter</a>
+            <a href="https://" target="_blank">X / Twitter</a>
         </p>
         <p>
             <i class="fa-solid fa-globe"></i>
-            <a href="https://YOURWEBSITE.com" target="_blank">Website</a>
+            <a href="https:/" target="_blank">Website</a>
         </p>
+        <h3>Call Me on </h3>
+        <p>+256756654214</p>
+        <p>+256744716765</p>
+        <p>+256702380865</p>
     </section>
 
     <footer class="site-footer">
