--- a/admin.html
+++ b/admin.html
@@ -59,7 +59,7 @@
 
     </div>
 
-    <script src="scripts/admin2.js"></script>
+    <script type="module" src="scripts/admin3.js"></script>
 </body>
 
 </html>
