--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 
-    <script src="scripts/basepp2.js"></script>
+    <script type="module" src="scripts/basepp3.js"></script>
 
 
 </body>
