--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 <input type="email" name="customer_email" required>
             </label>
             <label>
+                Phone / WhatsApp:
+                <input type="tel" name="customer_contact" placeholder="07XX XXX XXX" required>
+            </label>
+            <label>
                 Message:
                 <textarea name="order_message" placeholder="Any notes for the order"></textarea>
             </label>
